--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>T2D</title>
+		<title>Task 2 Do</title>
 	</head>
 	<body>
 		<div id="app"></div>
